Agregando codificacion UTF-8

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang = "es">
 <head>
+	<meta charset="utf-8"> <!-- para asignar la codificacion del documento -->
 	<title>Mi primera página</title>
 </head>
 <body>
