Uso de header, section, nav, artice, aside, footer

--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
 	<title>Mi primera página</title>
 </head>
 <body>
-<p> holoa mundo </p>
+<header> Principios en Html y Css </header><br>
+	<nav> menu </nav> <br>
+	<section>
+		 <article> uso de header, nav, section, article, aside y footer </article><br>
+	</section>
+	<aside>  </aside>
+	<footer> aqui va el pied de pagina</footer>
 </body>
 </html>
