Uso de estructura y emantica a la pagina con EM, STRONG, h

--- a/index.html
+++ b/index.html
@@ -2,15 +2,45 @@
 <html lang = "es">
 <head>
 	<meta charset="utf-8"> <!-- para asignar la codificacion del documento -->
-	<title>Mi primera página</title>
+	<title>Manual de HTML y CSS</title>
 </head>
 <body>
-<header> Principios en Html y Css </header><br>
-	<nav> menu </nav> <br>
+<header> Manuales de Programacion -HEADER </header>
+	<nav> Lista de Manuales -NAV </nav> 
 	<section>
-		 <article> uso de header, nav, section, article, aside y footer </article><br>
+		<h1>Manual de HTML y CSS</h1>
+		 <article> 
+		 <h2>Fundamentos</h2>
+		 	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+		 	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+		 	quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+		 	consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+		 	cillum dolore eu fugiat nulla pariatur. <em>Este texto tienen enfais</em> Excepteur sint occaecat cupidatat non
+		 	proident, sunt in culpa qui officia deserunt mollit anim id est laborum.<strong>Este tiene un enfacis mayor</strong></p>
+		  </article><br>
+		   <article> 
+		 <h2>HTML</h2>
+		 	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+		 	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+		 	quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+		 	consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+		 	cillum dolore eu fugiat nulla pariatur. <em>Este texto tienen enfais</em> Excepteur sint occaecat cupidatat non
+		 	proident, sunt in culpa qui officia deserunt mollit anim id est laborum.<strong>Este tiene un enfacis mayor</strong></p>
+		  </article><br>
+		   <article> 
+		 <h2>CSS</h2>
+		 	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+		 	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+		 	quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+		 	consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+		 	cillum dolore eu fugiat nulla pariatur. <em>Este texto tienen enfais</em> Excepteur sint occaecat cupidatat non
+		 	proident, sunt in culpa qui officia deserunt mollit anim id est laborum.<strong>Este tiene un enfacis mayor</strong></p>
+		  </article><br>
 	</section>
-	<aside>  </aside>
-	<footer> aqui va el pied de pagina</footer>
+	<aside> 
+	<h3>Sobre el Autor</h3>
+		<p>Este Manual Fue elavorado por mi, Un amante de la tecnologia y apasionado por los videojuegos </p>
+		 </aside> <br>
+	<footer> Todos los derechos reservados / FOOTER</footer>
 </body>
 </html>
