--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<section>
 		<h1>Manual de HTML y CSS</h1>
 		 <article> 
-		 <h2>Fundamentos</h2>
+		 <h2> <a href="fundamentos.html">Fundamentos</a></h2>
 		 	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 		 	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 		 	quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -41,6 +41,6 @@
 	<h3>Sobre el Autor</h3>
 		<p>Este Manual Fue elavorado por mi, Un amante de la tecnologia y apasionado por los videojuegos </p>
 		 </aside> <br>
-	<footer> Todos los derechos reservados / FOOTER</footer>
+	<footer> Todos los derechos reservados -FOOTER</footer>
 </body>
 </html>
