agregando enlace hacia otra url con anchor

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 	</section>
 	<aside> 
 	<h3>Sobre el Autor</h3>
-		<p>Este Manual Fue elavorado por mi, Un amante de la tecnologia y apasionado por los videojuegos </p>
+		<p>Este Manual Fue elavorado por <a href="https://twitter.com/ninhjatake">mi</a>, Un amante de la tecnologia y apasionado por los videojuegos </p>
 		 </aside> <br>
 	<footer> Todos los derechos reservados -FOOTER</footer>
 </body>
