--- a/fundamentos.html
+++ b/fundamentos.html
@@ -4,6 +4,6 @@
 	<title></title>
 </head>
 <body>
-<a href="index.html"> Manual de HTML y CSS</a>
+<a href="index.html"> Manual de HTML y CSS</a>. <a href="https://devcode.la/static/logo.png" download=""> Descargar Logo</a>
 </body>
 </html>
